gst_message_new_application fails when passed a NULL structure

QGst provided a default null structure argument ApplicationMessagePtr::create
gst_message_new_application then failed with the error:
GStreamer-CRITICAL **: gst_message_new_application: assertion 'structure != NULL' failed

This defines a meaningless structure for the refpointer test and removes
the default to make sure a structure is provided.

https://bugzilla.gnome.org/show_bug.cgi?id=746584